# University

./: .gitignore  README.md
AI/: komandos.py  komandosA.py  superciag.py  test2.txt  validator2.py  zad2.py  zad3.py  zad_poker.py
AISD/pracownia2/: test1.cpp
AISD/pracownia3/: main.cpp
AP2/: CMakeLists.txt
AP2/list1/: 1.cpp  3.cpp  5.cpp  8.cpp
AP2/list2/: 3.cpp
AlgorithmImplementationMethods/lista10/: zad3.py
AlgorithmImplementationMethods/lista12/: zad1.py  zad2.py
AlgorithmImplementationMethods/lista14/: zad2.py  zad3.py
AlgorithmImplementationMethods/lista15/: zad1.py
AlgorithmsAndDataStructures/: README.md
ArtificialIntelligence/: AC3-2.py  obrazki logiczne P1.py  obrazkiAC3.py  obrazkiAC3_out.txt  zad1.py  zad1_output.txt  zad2_output.txt  zad4.py  zad5_input.txt  zad5_output.txt  zad_input.txt  zadkom_input.txt
C++Programming/lista 6 c++/: Abs.cpp  Abs.h  CMakeLists.txt  Cos.cpp  Cos.h  Dodaj.cpp  Dodaj.h  Dzielenie.cpp  Dzielenie.h  E.cpp  E.h  Exp.cpp  Exp.h  Fi.cpp  Fi.h  Liczba.cpp  Liczba.h  Ln.cpp  Ln.h  Logarytm.cpp  Logarytm.h  Mnozenie.cpp  Mnozenie.h  Modulo.cpp  Modulo.h  Odejmij.cpp  Odejmij.h  Odwrotna.cpp  Odwrotna.h  Pi.cpp  Pi.h  Potegowanie.cpp  Potegowanie.h  Przeciwna.cpp  Przeciwna.h  Sin.cpp  Sin.h  Wyrazenie.cpp  Wyrazenie.h  Zmienna.cpp  (+2 more)
Frontend/: README.md
LanguageModels/: .gitignore  README.md
MachineLearning/: README.md
NeuralNetworks/: Assignment1.ipynb  Assignment2.ipynb  Assignment4.ipynb  Assignment5.ipynb  Assignment5_2.ipynb  README.md
PO/: co trzeba wiedziec.txt
PracticalAlgorithmics2/: README.md
(+395 files in other folders)
