cmake_minimum_required(VERSION 3.24)
project(lista_6_c__)

set(CMAKE_CXX_STANDARD 17)

add_executable(lista_6_c__ main.cpp Wyrazenie.cpp Wyrazenie.h Zmienna.cpp Zmienna.h Pi.cpp Pi.h Fi.cpp Fi.h E.cpp E.h Liczba.cpp Liczba.h Abs.cpp Abs.h Sin.cpp Sin.h Cos.cpp Cos.h Exp.cpp Exp.h Ln.cpp Ln.h Przeciwna.cpp Przeciwna.h Odwrotna.cpp Odwrotna.h Dodaj.cpp Dodaj.h Odejmij.cpp Odejmij.h Mnozenie.cpp Mnozenie.h Dzielenie.cpp Dzielenie.h Logarytm.cpp Logarytm.h Potegowanie.cpp Potegowanie.h Modulo.cpp Modulo.h)
